fix issue with footer on mobile

--- a/solar-system-planets/src/App.css
+++ b/solar-system-planets/src/App.css
@@ -19,4 +19,5 @@ body {
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
   row-gap: 16px;
+  position: relative;
 }
